# llm_chain

./: .gitignore  Cargo.toml  README.md  client_get_inference.sh  try_rpc.sh
client/: Cargo.toml
client/src/: behaviour.rs  lib.rs  main.rs  node.rs  rpc.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/tests/ui/: try.rs
server/: Cargo.toml
server/src/: behaviour.rs  main.rs  node.rs
server/src/node/: miner.rs  mod.rs  provider.rs
src/: behavior.rs  behaviour.rs  behaviour_util.rs  heap.rs  lib.rs  main.rs  node.rs  telemetry.rs
src/behavior/: gossip.rs  mod.rs
src/behaviour/: gossip.rs  mod.rs  req_res.rs  streaming.rs
src/blockchain/: .block.rs  .transaction.rs  block.rs  chain.rs  mod.rs  transaction.rs
src/blockchain/transaction/: mint.rs  mod.rs  transfer.rs
src/chain/: .transaction.rs  block.rs  mod.rs  transaction.rs
src/heap/: max.rs  min_map.rs  mod.rs
src/node/: .client.rs  behaviour.rs  client.rs  mod.rs  provider.rs  rpc.rs  server.rs  user_input.rs  validator.rs
src/node/client/: mod.rs  models.rs  node.rs
src/node/rpc/: messages.rs  mod.rs
src/util/: behaviour.rs  hash.rs  map_vec.rs  mod.rs
src/util/.json_rpc/: mod.rs  socket.rs  thread.rs
src/util/behaviour/: mod.rs  req_res.rs  streaming.rs
src/util/heap/: max.rs  min_map.rs
src/util/json_rpc/: error.rs  methods.rs  mod.rs  socket.rs  thread.rs
tests/: client_server.rs
tests/all/: helpers.rs  main.rs  map_vec.rs
tests/scripts/: client_start_auction.sh
