[package]
name = "libp2p-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
libp2p = { version = "0.54.1", features = ["gossipsub", "quic", "tcp", "tls", "dns","tokio", "identify", "noise", "yamux", "websocket", "ping", "macros", "floodsub", "kad", "mdns"] }
serde = { version = "1.0.215",  features = ["derive"] }
tokio = { version = "1.41.1",features = ["full"] } 

tracing-log = "0.2.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
serde_json = "1.0.132"
clap =  { version = "4.5.21", features = ["derive", "env"] }
chrono = "0.4.38"
sha3 = "0.10.8"
anyhow = "1.0.93"


