[package]
name = "llm_chain"
version = "0.1.0"
edition = "2021"
 
[lib]
path="src/lib.rs"

[[bin]]
name="client"
path="client/src/main.rs"

[[bin]]
name="server"
path="server/src/main.rs"

[[bin]]
name="rpc"
path="bin/rpc.rs"


[workspace]
members = ["macros",   "server", "client"]

[dependencies]
macros = { workspace = true }
futures ={ workspace = true}
chrono ={workspace = true}
sha3 ={workspace = true}
clap ={workspace = true}
libp2p ={workspace = true}
serde ={workspace = true}
tokio ={workspace = true}
tracing ={workspace = true}
tracing-log ={workspace = true}
tracing-bunyan-formatter ={workspace = true}
tracing-subscriber ={workspace = true}
serde_json ={workspace = true}
thiserror ={workspace = true}



[workspace.dependencies]
macros = { path ="./macros"}
client = { path ="./client"}
server = { path ="./server"}
futures = "0.3.31"
chrono = "0.4.38"
sha3 = "0.10.8"
clap =  { version = "4.5.21", features = ["derive", "env"] }
libp2p = { version = "0.54.1", features = ["gossipsub", "rendezvous", "quic", "request-response", "json", "tcp", "tls", "dns","tokio", "identify", "noise", "yamux", "websocket", "ping", "macros", "floodsub", "kad", "mdns", "serde"] }
serde = { version = "1.0.215",  features = ["derive"] }
tokio = { version = "1.41.1",features = ["full"] } 
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = "0.2.0"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
serde_json = "1.0.132"
thiserror = "2.0.7"


