[package]
name = "client"
version = "0.1.0"
edition = "2021"

[lib]
path="src/lib.rs"

[[bin]]
name="client"
path="bin/main.rs"

[[bin]]
name="rpc"
path="bin/rpc.rs"


[dependencies]
core = {path ="../"}
libp2p ={workspace = true}
seraphic = { workspace = true }
tokio ={workspace = true}
serde_json={workspace=true}
serde={workspace=true}
tracing ={workspace = true}
clap ={workspace = true}
